# python-versioneer

./: .gitignore  .mailmap  .travis.yml  INSTALL.md  MANIFEST.in  NEWS.md  NOTES  README.md  README.rst  UPGRADING.md  _version.py  details.md  developers.md  i4.txt  make-versioneer.py  pyproject.toml  setup.cfg  setup.py  test_git.py  tox.ini  versioneer.py  versioning.py
.github/: dependabot.yml
.github/workflows/: ci.yml  tox.yml
scripts/: versioneer.bat
src/: cmdclass.py  fallback.py  finalize.py  from_file.py  from_parentdir.py  get_versions.py  hatchling.py  header.py  installer.py  parentdir.py  render.py  setupfunc.py  subprocess-helper.py  subprocess_helper.py  trailer.py  vcs_detect.py
src/git/: from-checkout.py  from-variable.py  from_keywords.py  from_vcs.py  install.py  is_found.py  long-version.py  long_get_versions.py  long_header.py  middle.py  parse.py  setup.py
src/hg/: from_vcs.py
src/svn/: from_keywords.py  from_vcs.py  install.py  is_found.py  long_get_versions.py  long_header.py
src/vcs_template/: from_keywords.py  from_vcs.py  install.py  is_found.py  long_get_versions.py
test/: run_pyflakes_src.py  test_config.py  test_file.py  test_git.py  test_render.py  test_setupfunc.py
test/demoapp/: setup.cfg  setup.py
test/demoapp-pyproject/: pyproject.toml  setup.cfg  setup.py
test/demoapp-script-only/: MANIFEST.in  setup.cfg  setup.py
test/demoapp-script-only/src/: dummy  rundemo-template
test/demoapp2-distutils/: setup.cfg  setup.py
test/demoapp2-distutils-subproject/subproject/: setup.py
test/demoapp2-setuptools/: setup.py
test/demoappext-setuptools/: README  setup.cfg  setup.py
test/demolib/: setup.cfg  setup.py
test/flakesapp/: setup.py
test/git/: common.py  test_git.py  test_invocations.py
(+5 files in other folders)
