[build-system]
requires = ["setuptools", "tomli; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "versioneer"
description = "Easy VCS-based management of project version strings"
authors = [
  { name = "Brian Warner" },
]
maintainers = [
  { name = "Christopher Markiewicz", email = "effigies@gmail.com" },
  { name = "Nathan Buckner",  email = "bucknerns@users.noreply.github.com" },
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/python-versioneer/python-versioneer"

[project.scripts]
"versioneer" = "versioneer:main"

[project.optional-dependencies]
toml = ["tomli; python_version < '3.11'"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "_version.py"
parentdir_prefix = ""
